--- a/app/src/main/res/layout/activity_delivery_registration.xml
+++ b/app/src/main/res/layout/activity_delivery_registration.xml
@@ -35,8 +35,10 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="FirstName"
-                    android:inputType="text" />
+                    android:hint="@string/firstname_dr"
+                    android:inputType="text"
+                    android:textColorHint="#616161"
+                    tools:ignore="TextContrastCheck" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -49,8 +51,10 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="LastName"
-                    android:inputType="text" />
+                    android:hint="@string/lastname_dr"
+                    android:inputType="text"
+                    android:textColorHint="#616161"
+                    tools:ignore="TextContrastCheck" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -62,10 +66,11 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:drawableLeft="@drawable/graymail"
+                    android:drawableStart="@drawable/graymail"
                     android:drawablePadding="10dp"
-                    android:hint="Email id"
-                    android:inputType="textEmailAddress" />
+                    android:hint="@string/email_id_dr"
+                    android:inputType="textEmailAddress"
+                    tools:ignore="TextContrastCheck" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -78,8 +83,10 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Password"
-                    android:inputType="textPassword" />
+                    android:hint="@string/password_dr"
+                    android:inputType="textPassword"
+                    android:textColorHint="#616161"
+                    tools:ignore="TextContrastCheck" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -92,7 +99,7 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Confirm Password"
+                    android:hint="@string/confirm_password_dr"
                     android:inputType="textPassword" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -117,7 +124,7 @@
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="MobileNumber"
+                        android:hint="@string/mobilenumber_dr"
                         android:inputType="number" />
                 </com.google.android.material.textfield.TextInputLayout>
             </LinearLayout>
@@ -131,7 +138,7 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="House/Streert no"
+                    android:hint="@string/house_streert_no_dr"
                     android:inputType="text" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -144,7 +151,7 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Area"
+                    android:hint="@string/area_dr"
                     android:inputType="textMultiLine" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -157,15 +164,15 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Pin Code"
+                    android:hint="@string/pin_code_dr"
                     android:inputType="number" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <TextView
-                android:id="@+id/txt1"
+                android:id="@+id/state"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="State"
+                android:text="@string/state_dr"
                 android:textSize="14sp" />
 
             <Spinner
@@ -173,20 +180,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:entries="@array/State" />
+                android:entries="@array/City" />
 
-            <TextView
-                android:id="@+id/txt4"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="11dp"
-                android:text="City" />
-
-            <Spinner
-                android:id="@+id/City"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp" />
 
             <Button
                 android:id="@+id/Signupp"
@@ -194,7 +189,7 @@
                 android:layout_height="40dp"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/button_shape"
-                android:text="Register"
+                android:text="@string/register_dr"
                 android:textAllCaps="true"
                 android:textColor="#FFFFFF"
                 android:textSize="18sp" />
@@ -210,26 +205,26 @@
                     android:id="@+id/hr"
                     android:layout_width="105dp"
                     android:layout_height="1dp"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="10dp"
                     android:background="#595858" />
 
                 <TextView
                     android:id="@+id/OR"
-                    android:layout_width="44dp"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginTop="7dp"
                     android:layout_weight="1"
-                    android:text="OR"
+                    android:text="@string/or_dr"
                     android:textAlignment="center"
                     android:textColor="#040404"
-                    android:textSize="17sp" />
+                    android:textSize="15sp" />
 
                 <TableRow
                     android:id="@+id/dr"
                     android:layout_width="105dp"
                     android:layout_height="1dp"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="10dp"
                     android:background="#595858" />
             </LinearLayout>
 
@@ -238,10 +233,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
-                android:text="SignIn with"
+                android:text="@string/signin_with_dr"
                 android:textAlignment="center"
                 android:textColor="#0C0C0C"
-                android:textSize="18sp" />
+                android:textSize="15sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -254,30 +249,32 @@
                     android:id="@+id/emaillid"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="2dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginEnd="20dp"
                     android:layout_weight="1"
                     android:background="@drawable/btnred"
-                    android:drawableLeft="@drawable/whitemail"
+                    android:drawableStart="@drawable/whitemail"
                     android:padding="10dp"
-                    android:text="Email"
+                    android:text="@string/email_dr"
+                    android:textColor="#FFFFFF"
                     android:textStyle="bold"
-                    android:textColor="#FFFFFF" />
+                    style="?android:attr/buttonBarButtonStyle" />
 
                 <Button
                     android:id="@+id/Phonenumber"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="2dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginEnd="20dp"
                     android:layout_weight="1"
                     android:background="@drawable/btnblueish"
-                    android:drawableLeft="@drawable/phonewhite"
+                    android:drawableStart="@drawable/phonewhite"
                     android:drawablePadding="5dp"
                     android:padding="8dp"
-                    android:text="Phone"
+                    android:text="@string/phone_dr"
+                    android:textColor="#FFFFFF"
                     android:textStyle="bold"
-                    android:textColor="#FFFFFF" />
+                    style="?android:attr/buttonBarButtonStyle" />
             </LinearLayout>
 
         </LinearLayout>
