--- a/app/src/main/res/layout/activity_cheflogin.xml
+++ b/app/src/main/res/layout/activity_cheflogin.xml
@@ -29,13 +29,16 @@
             android:id="@+id/Lemail"
             android:layout_marginTop="15dp"
             android:paddingBottom="10dp">
+
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/ic_baseline_email_24"
+                android:drawableStart="@drawable/ic_baseline_email_24"
                 android:drawablePadding="10dp"
-                android:hint="Email id"
-                android:inputType="textEmailAddress"/>
+                android:hint="@string/email_id_cl"
+                android:inputType="textEmailAddress"
+                android:textColorHint="#616161"
+                tools:ignore="TextContrastCheck" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -50,26 +53,28 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawablePadding="10dp"
-                android:hint="Password"
-                android:inputType="textPassword"/>
+                android:hint="@string/password_cl"
+                android:inputType="textPassword"
+                android:textColorHint="#616161"
+                tools:ignore="TextContrastCheck" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/forgotpass"
-            android:text="Forgot Password?"
+            android:text="@string/forgot_password_cl"
             android:gravity="end"
             android:textSize="16sp"
             android:textColor="#090909"/>
 
         <Button
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="50dp"
             android:id="@+id/button4"
             android:layout_marginTop="20dp"
             android:background="@drawable/button_shape"
-            android:text="Login"
+            android:text="@string/login_cl"
             android:textSize="18sp"
             android:textColor="#FFFF"/>
         <TextView
@@ -77,7 +82,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/textView3"
             android:layout_gravity="center"
-            android:text="Don't Have An Account? Create"
+            android:text="@string/account"
             android:layout_marginTop="10dp"
             android:textColor="#090909"
             android:textSize="16sp"/>
@@ -98,7 +103,7 @@
                 android:layout_width="44dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/OR"
-                android:text="OR"
+                android:text="@string/or_cl"
                 android:layout_marginTop="10dp"
                 android:textAlignment="center"
                 android:textColor="#090909"/>
@@ -114,7 +119,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/signphone"
-            android:text="SignIn With"
+            android:text="@string/signin_with_cl"
             android:layout_gravity="center"
             android:textAlignment="center"
             android:layout_marginTop="11dp"
@@ -122,13 +127,13 @@
             android:textSize="18sp"/>
         <Button
             android:layout_width="105dp"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:id="@+id/btnphone"
             android:layout_gravity="center"
             android:background="@drawable/btnblueish"
-            android:text="Phone"
+            android:text="@string/phone_cl"
             android:layout_marginTop="13dp"
-            android:drawableLeft="@drawable/phonewhite"
+            android:drawableStart="@drawable/phonewhite"
             android:padding="10dp"
             android:textColor="#FFFF"/>
     </LinearLayout>
