--- a/app/src/main/res/layout/activity_delivery_loginphone.xml
+++ b/app/src/main/res/layout/activity_delivery_loginphone.xml
@@ -22,7 +22,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Verify Phone Number"
+            android:text="@string/verify_phone_number_dlp"
             android:layout_gravity="center"
             android:textSize="20sp"
             android:textColor="#090909"
@@ -39,12 +39,14 @@
                 android:id="@+id/CountryCode"/>
 
             <EditText
-                android:layout_width="132dp"
-                android:layout_height="wrap_content"
                 android:id="@+id/Dphonenumber"
-                android:layout_marginLeft="5dp"
-                android:hint="Phone Number"
-                android:inputType="number"/>
+                android:layout_width="152dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="5dp"
+                android:hint="@string/phone_number_dlp"
+                android:inputType="number"
+                android:textColorHint="#757575"
+                android:autofillHints="" />
         </LinearLayout>
         <Button
             android:layout_width="match_parent"
@@ -52,7 +54,7 @@
             android:id="@+id/Sendotp"
             android:layout_marginTop="30dp"
             android:background="@drawable/button_shape"
-            android:text="Send OTP"
+            android:text="@string/send_otp_dlp"
             android:textColor="@color/white"
             android:textSize="18sp"/>
         <TextView
@@ -60,7 +62,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/Signupif"
             android:layout_marginTop="13dp"
-            android:text="Don't Have An Account? SignUp"
+            android:text="@string/acc_dlp"
             android:textAlignment="center"
             android:textColor="@color/Black"
             android:textSize="16sp"/>
@@ -83,7 +85,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/OR"
                 android:layout_gravity="center"
-                android:text="OR"
+                android:text="@string/or_dlp"
                 android:textColor="@color/Black"
                 android:layout_marginTop="6dp"
                 android:textSize="16sp"
@@ -103,7 +105,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/signphone"
             android:layout_marginTop="20dp"
-            android:text="SignIn With"
+            android:text="@string/signin_with_dlp"
             android:textAlignment="center"
             android:textColor="@color/Black"
             android:textSize="18sp"/>
@@ -112,10 +114,10 @@
             android:layout_height="wrap_content"
             android:id="@+id/DbtnEmail"
             android:background="@drawable/btnred"
-            android:text="Email"
+            android:text="@string/email_dlp"
             android:layout_marginTop="15dp"
             android:textColor="@color/white"
-            android:drawableLeft="@drawable/whitemail"
+            android:drawableStart="@drawable/whitemail"
             android:padding="10dp"
             android:layout_gravity="center"/>
 
