--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -23,7 +23,7 @@
         android:layout_width="275dp"
         android:layout_height="390dp"
         android:layout_centerHorizontal="true"
-        android:background="@drawable/btnblueish"
+        android:background="@color/white"
         android:orientation="vertical"
         android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -38,29 +38,32 @@
             android:layout_width="157dp"
             android:layout_height="65dp"
             android:layout_gravity="center"
-            app:srcCompat="@drawable/menu_img" />
+            app:srcCompat="@drawable/eatme_logo" />
 
         <TextView
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="cursive"
-            android:padding="20dp"
+            android:padding="7dp"
             android:text="Eat Homemade Anywhere !"
             android:textAlignment="center"
             android:textColor="#070707"
-            android:textSize="18sp" />
+            android:textSize="24sp"
+            android:textStyle="bold"/>
 
         <Button
             android:id="@+id/SignwithEmail"
             android:layout_width="200dp"
-            android:layout_height="wrap_content"
+            android:layout_height="55dp"
+            android:layout_marginTop="2dp"
             android:layout_gravity="center"
-            android:background="@drawable/btnred"
+            android:background="@drawable/btnblueish"
             android:backgroundTint="@color/OffWhite"
             android:drawableLeft="@drawable/whitemail"
             android:hapticFeedbackEnabled="false"
-            android:paddingLeft="10dp"
+            android:paddingStart="10dp"
+            android:shadowColor="@color/Black"
             android:text="SigIn with Email"
             android:textColor="#FFFFFF" />
 
@@ -69,11 +72,12 @@
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="30dp"
-            android:background="@drawable/btnred"
+            android:layout_marginTop="20dp"
+            android:background="@color/Red"
             android:drawableLeft="@drawable/phonewhite"
             android:gravity="center"
             android:paddingLeft="10dp"
+            android:shadowColor="@color/Black"
             android:text="SignIn with Phone"
             android:textColor="#FFFFFF" />
 
@@ -121,7 +125,9 @@
             android:layout_marginTop="15dp"
             android:background="@drawable/button_shape"
             android:text="Signup"
-            android:textColor="#FFFFFF" />
+            android:textColor="#FFFFFF"
+            android:textSize="20sp"
+            tools:ignore="TouchTargetSizeCheck" />
     </LinearLayout>
 
 
