--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -257,6 +257,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
                     android:layout_marginRight="2dp"
+                    android:layout_marginBottom="35dp"
                     android:layout_weight="1"
                     android:background="@drawable/btnred"
                     android:drawableLeft="@drawable/whitemail"
@@ -270,6 +271,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
                     android:layout_marginRight="2dp"
+                    android:layout_marginBottom="35dp"
                     android:layout_weight="1"
                     android:background="@drawable/btnblueish"
                     android:drawableLeft="@drawable/phonewhite"
